[package]
name = "gglib-mcp"
version.workspace = true
edition.workspace = true
description = "MCP (Model Context Protocol) server management for gglib"
license.workspace = true
publish = false

[dependencies]
# Core domain types and ports only - no sqlx
gglib-core = { path = "../gglib-core" }

# Async runtime
tokio = { workspace = true }

# Async trait
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[lints]
workspace = true
