[package]
name = "gglib-proxy"
version.workspace = true
edition.workspace = true
description = "OpenAI-compatible proxy server for gglib"
license.workspace = true
publish = false

[features]
default = []

[dependencies]
# Core domain types and ports (NO runtime, NO sqlx)
gglib-core = { path = "../gglib-core" }

# HTTP server
axum = { workspace = true }
tokio = { version = "1.0", features = ["full"] }

# HTTP client for forwarding
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# HTTP body handling
bytes = "1"

# Async utilities
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async trait support
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
