[package]
name = "gglib-proxy"
version.workspace = true
edition.workspace = true
description = "OpenAI-compatible proxy server for gglib"
license.workspace = true
publish = false
build = "build.rs"

[features]
default = []

[dependencies]
# Core domain types and ports (NO runtime, NO sqlx)
gglib-core = { path = "../gglib-core" }

# MCP service for tool gateway
gglib-mcp = { path = "../gglib-mcp" }

# Generic SSE broadcast utility, shared with gglib-axum (no gglib-* deps of its own)
gglib-sse = { workspace = true }

# HTTP server
axum = { workspace = true }
tokio = { version = "1.0", features = ["full"] }

# CORS middleware — the Tauri GUI's webview runs on the `tauri://localhost`
# (and `http://tauri.localhost` on Windows) origin, which browsers treat as
# cross-origin relative to this proxy's `127.0.0.1:<port>` origin; without
# this, EventSource/fetch calls to the proxy are blocked by CORS.
tower-http = { workspace = true }

# HTTP client for forwarding
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream"] }

# HTTP body handling
bytes = "1"

# Async utilities
futures-util = "0.3"
futures-core = "0.3"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Session ID generation
uuid = { workspace = true, features = ["v4"] }

# Async trait support
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
