[package]
name = "gglib-tauri"
version = "0.1.0"
edition = "2024"
description = "Tauri GUI backend adapter for gglib"
license = "MIT"
publish = false

[lib]
name = "gglib_tauri"
path = "src/lib.rs"

[dependencies]
gglib-core = { path = "../gglib-core" }
gglib-db = { path = "../gglib-db" }
gglib-mcp = { path = "../gglib-mcp" }
gglib-runtime = { path = "../gglib-runtime" }

# Root crate for access to GuiBackend (temporary until migration)
gglib = { path = "../.." }

# Shared deps
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Tauri-specific dependencies - will be added when commands are migrated
# Note: tauri version should match src-tauri/Cargo.toml
# tauri = "2.x"
# tokio = { workspace = true }
# serde_json = { workspace = true }
# async-trait = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
serde_json = { workspace = true }

[lints.rust]
unsafe_code = "deny"
