[package]
name = "gglib-tauri"
version.workspace = true
edition.workspace = true
description = "Tauri GUI backend adapter for gglib"
license.workspace = true
publish = false

[lib]
name = "gglib_tauri"
path = "src/lib.rs"

[dependencies]
gglib-app-services = { path = "../gglib-app-services" }
gglib-bootstrap = { path = "../gglib-bootstrap" }
gglib-core = { path = "../gglib-core" }
gglib-gguf = { path = "../gglib-gguf" }  # GGUF_BOOTSTRAP_EXCEPTION: ToolSupportDetector + GgufParser used by bootstrap_with
gglib-mcp = { path = "../gglib-mcp" }
gglib-runtime = { path = "../gglib-runtime", features = ["prebuilt"] }

# Shared deps
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Tauri-specific dependencies
# Note: version should match src-tauri/Cargo.toml
tauri = "2.8"
tokio = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
serde_json = { workspace = true }

[lints.rust]
unsafe_code = "deny"
