[package]
name = "gglib-voice"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Voice mode for gglib - local STT (whisper.cpp) and TTS (Kokoro) pipeline"
publish = false

# gglib-voice wraps FFI crates (cpal, whisper-rs, ort) that need unsafe Send/Sync impls,
# so we override the workspace-level deny(unsafe_code) to warn.
[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
collapsible_if = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[features]
default = ["sherpa"]
# sherpa-onnx unified backend — Kokoro TTS + Whisper STT + Silero VAD via sherpa-rs
sherpa = ["dep:sherpa-rs"]
# Legacy: Kokoro v1.0 TTS backend (via vendored kokoro-tts fork)
kokoro = ["dep:kokoro-tts", "dep:ort"]
# Legacy: Whisper STT backend (via whisper-rs / whisper.cpp)
whisper = ["dep:whisper-rs"]
# Apple Silicon acceleration via CoreML for ONNX Runtime (Kokoro TTS)
coreml = ["ort/coreml"]
# CUDA acceleration (sherpa-onnx or ORT)
cuda = ["ort/cuda"]

[dependencies]
# Internal crates
gglib-core = { path = "../gglib-core" }

# Async runtime
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }

# Async traits (for TtsBackend dyn compatibility)
async-trait = { workspace = true }

# Audio capture (cross-platform: CoreAudio/WASAPI/ALSA)
cpal = "0.15"

# Audio playback
rodio = { version = "0.20", default-features = false, features = ["wav"] }

# Audio resampling (device sample rate → 16kHz for whisper)
rubato = "0.16"

# Speech-to-Text: whisper.cpp Rust bindings (optional — feature "whisper")
whisper-rs = { version = "0.15", optional = true }

# Unified STT/TTS/VAD backend via sherpa-onnx bindings (optional — feature "sherpa")
sherpa-rs = { version = "0.6", features = ["tts", "download-binaries", "static"], optional = true }

# Text-to-Speech: Kokoro v1.0 — local fork with Misaki G2P patch (optional — feature "kokoro").
# The upstream kokoro-tts crate uses an espeak dictionary for G2P, but the
# Kokoro model was trained with the Misaki G2P engine. The phoneme mismatch
# causes garbled/hallucinated speech. Our fork patches the G2P layer to use
# misaki-rs (the correct engine) while keeping all ONNX inference untouched.
kokoro-tts = { path = "../kokoro-tts-custom", features = ["misaki-g2p"], optional = true }

# ONNX Runtime (used by kokoro-tts, configurable acceleration — optional, pulled in by "kokoro" feature)
ort = { version = "2.0.0-rc.11", default-features = false, features = [
    "download-binaries",
    "copy-dylibs",
    "ndarray",
], optional = true }

# HTTP client for model downloads
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-test = { workspace = true }
tempfile = { workspace = true }
