[package]
name = "kokoro-tts"
description = "用于Rust的轻量级AI离线语音合成器（Kokoro TTS），可轻松交叉编译到移动端"
version = "0.3.2"
edition = "2024"
keywords = ["TTS", "Offline", "Lite", "AI", "Synthesizer"]
license = "Apache-2.0"
repository = "https://github.com/mzdk100/kokoro.git"
readme = "README.md"

[features]
use-cmudict = ["cmudict-fast"]
misaki-g2p = ["misaki-rs"]

[dependencies]
# Misaki G2P: the correct grapheme-to-phoneme engine for Kokoro models.
# The Kokoro model was trained with Misaki — using espeak G2P instead
# produces wrong phonemes and garbled/hallucinated speech output.
misaki-rs = { version = "0.3", optional = true, default-features = false }
bincode = "2.0"
chinese-number = { version = "0.7.8",default-features = false,features = ["number-to-chinese", "chinese-to-number"] }
cmudict-fast = { version = "0.8.0", optional = true }
futures = "0.3.31"
jieba-rs = "0.8.1"
log = "0.4.29"
ndarray = "0.17.2"
ort = "2.0.0-rc.11"
pin-project = "1.1.10"
pinyin = "0.11.0"
rand="0.10.0-rc.7"
regex = "1.12.2"
tokio = { version = "1.49.0",features = ["fs", "rt-multi-thread","time", "sync"] }

[dev-dependencies]
anyhow = "1.0.100"
tokio = {version = "1.49.0",features = ["macros"]}
voxudio = { version = "0.5.7",features = ["device"] }

[build-dependencies]
cc = "1.2.53"